--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ rerun.txt
 pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
-
+public/sitemap.xml
 ## Environment normalisation:
 /.bundle
 /vendor/bundle
