--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,11 @@
 /db/*.sqlite3-journal
 /public/assets
 # Ignore all logfiles and tempfiles.
+/scripts/collection.xlsx
 /log/*.log
 /tmp
 oc2.sublime-workspace
-import.xls
+/scripts/import.xls
 /import
 /images/*
 /scripts/import
